<resources>
    <string name="app_name">FX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sellText">壳</string>
    <string name="callText">買</string>
    <string name="sellcallText">壳買</string>
    <string name="expiryText">有効期限</string>
    <string name="opening_price">始値比</string>

    <!-- Expire Radio Text -->
    <string name="current_date">当日</string>
    <string name="weekend_date">週末</string>
    <string name="indefinite_date">無期限</string>
    <string name="designated_date">指定\n日時</string>
    <string name="designated_date_value">指定日時:%4$1d/%2$2d/%2$3d %2$4d:%2$5d</string>

    <string name="setting">設定</string>
    <string name="spread">スプレッド\n%.1f</string>

    <!-- Order FX Type -->
    <string name="orderUSD_JPY">USD\n/JPY</string>
    <string name="orderKRW_JPY">KRW\nJPY</string>
    <string name="orderCNY_JPY">CNY\nJPY</string>


    <!-- Main Radio Button -->
    <string name="radio1">リ\nア\nル\nタ\nイ\nム</string>
    <string name="radio2">指\n値\n·\n逆\n指\n値</string>
    <string name="radio3">I\nF\nD\n·\nI\nF\nO</string>


    <!-- TabTitle -->
    <string name="new_order">新規注文(リアルタイム)</string>
    <string name="new_appointment_order">新規注文(指値·逆指値·OCO)</string>
    <string name="new_IFD_order">IFD·IFO(注文)</string>

    <!-- FirstFragment -->
    <string name="max_quantity">發注可能數量:</string>
    <string name="call_quantity">注文數量:</string>
    <string name="call_quantity_text">注文數量</string>

    <string name="callData">%d</string>
    <string name="pipData">%.1fpips</string>
    <string name="limitData">%.3f</string>

    <!-- pipTitle -->
    <string name="pipLeverage">スリッペ一ヅ</string>
    <string name="pipAuto">自動利食い損切り</string>

    <!-- pipDataSetting -->
    <string name="pipAutoSell">利食い:</string>
    <string name="pipAutoBuy">損切り:</string>
    <string name="pipAutoOff">OFF</string>


    <string name="designation_text">指値</string>
    <string name="designation_station_text">逆指値</string>

    <string name="order_confirm">注文確認</string>


    <string name="default_order">0</string>
    <string name="default_pips">0.0</string>
    <string name="default_3f">0.000</string>


</resources>
