<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:background="#000000">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_navigaction_apps" />

        <TextView
            android:id="@+id/tabTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:text="@string/new_order"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/layoutbutton"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:gravity="center">
<!--        android:background="?attr/selectableItemBackground"    -->

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_settings"
                android:clickable="false" />
            <Button
                android:id="@+id/settingButton"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:text="@string/setting"
                android:background="@null"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="3dp"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                android:clickable="false"/>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000"
        android:paddingTop="3dp">

        <LinearLayout
            android:id="@+id/orderCurrency"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/imgbutton"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/img_large_usd_jpy" />

            <Button
                android:id="@+id/orderButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/orderUSD_JPY"
                android:textColor="#FFFFFF"
                android:textSize="13dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/highImage"
            android:layout_width="10dp"
            android:layout_height="13dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/orderCurrency"
            android:layout_toRightOf="@+id/orderCurrency"
            android:background="@drawable/ic_high" />

        <TextView
            android:id="@+id/high_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_toEndOf="@+id/highImage"
            android:layout_toRightOf="@+id/highImage"
            android:text="highPrice"
            android:textColor="#FFFFFF"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/lowImage"
            android:layout_width="10dp"
            android:layout_height="13dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/high_price"
            android:layout_toRightOf="@+id/high_price"
            android:background="@drawable/ic_low" />

        <TextView
            android:id="@+id/low_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_toEndOf="@+id/lowImage"
            android:layout_toRightOf="@+id/lowImage"
            android:text="lowPrice"
            android:textColor="#FFFFFF"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/opening_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/high_price"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/orderCurrency"
            android:layout_toRightOf="@+id/orderCurrency"
            android:text="@string/opening_price"
            android:textColor="#FFFFFF"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/pmImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/high_price"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/opening_price"
            android:src="@drawable/ic_minus" />

        <TextView
            android:id="@+id/fluctate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/high_price"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_toEndOf="@+id/pmImage"
            android:layout_toRightOf="@+id/pmImage"
            android:text="@string/opening_price"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/chartButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/imgbutton"
            android:gravity="center">

            <ImageView
                android:id="@+id/chartImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_chart_plus_o" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#000000"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/sellLayout"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp"
            android:layout_toStartOf="@+id/second_center"
            android:background="@drawable/ic_order_sell"
            android:gravity="left">

            <TextView
                android:id="@+id/sellText"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/sellText"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>


            <TextView
                android:id="@+id/sell_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:gravity="bottom"
                android:text="test"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/sell_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/sellText"
                app:srcCompat="@drawable/ic_minus" />

        </RelativeLayout>

        <View
            android:id="@+id/second_center"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_centerInParent="true" />


        <RelativeLayout
            android:id="@+id/callLayout"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@+id/second_center"
            android:background="@drawable/ic_order_buy"
            android:gravity="right">

            <TextView
                android:id="@+id/callText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/callText"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/call_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"

                android:gravity="bottom"
                android:text="test"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/call_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/callText"
                app:srcCompat="@drawable/ic_plus" />

        </RelativeLayout>


        <TextView
            android:id="@+id/spread_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="top|center"
            android:paddingTop="-10dp"
            android:text="@string/spread"
            android:textColor="#FFFFFF"
            android:textSize="12dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"

        android:background="#000000">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </androidx.viewpager.widget.ViewPager>

        <RadioGroup
            android:id="@+id/radio_group_tab"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingStart="23dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_tab1"
                android:layout_width="35dp"
                android:layout_height="110dp"
                android:checked="true"
                android:background="@drawable/ic_radio_vertical_first_state"
                android:button="@null"
                android:text="@string/radio1"
                android:textAlignment="center"
                android:textSize="12dp"
                android:textColor="#FFFFFF"/>

            <RadioButton
                android:id="@+id/radio_button_tab2"
                android:layout_width="35dp"
                android:layout_height="110dp"
                android:background="@drawable/ic_radio_vertical_middle_state"
                android:button="@null"
                android:text="@string/radio2"
                android:textAlignment="center"
                android:textSize="12dp"
                android:textColor="#FFFFFF"/>

            <RadioButton
                android:id="@+id/radio_button_tab3"
                android:layout_width="35dp"
                android:layout_height="110dp"
                android:background="@drawable/ic_radio_vertical_last_state"
                android:button="@null"
                android:text="@string/radio3"
                android:textAlignment="center"
                android:textSize="12dp"
                android:textColor="#FFFFFF"/>

        </RadioGroup>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="#444444">
    </LinearLayout>
</LinearLayout>